# rompatch-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  deny.toml
.github/workflows/: ci.yml
crates/rompatch/: Cargo.toml  README.md
crates/rompatch-core/: Cargo.toml  README.md
crates/rompatch-core/src/: apply.rs  bin_file.rs  checksum_fix.rs  error.rs  hash.rs  header.rs  info.rs  lib.rs
crates/rompatch-core/src/format/: README.md  aps.rs  bdf.rs  bps.rs  ips.rs  mod.rs  pmsr.rs  ppf.rs  rup.rs  ups.rs
crates/rompatch-core/tests/: golden_aps.rs  golden_bdf.rs  golden_bps.rs  golden_ips.rs  golden_pmsr.rs  golden_ppf.rs  golden_rup.rs  golden_ups.rs  info_describe.rs  proptest_safety.rs
crates/rompatch-core/tests/fixtures/: bdf_byteflip.patch  bdf_byteflip.tgt  bdf_growth.patch  bdf_growth.tgt  bdf_identity.patch  bdf_seek.patch
crates/rompatch-gui/: Cargo.toml  README.md  tauri.conf.json
crates/rompatch-gui/capabilities/: default.json
crates/rompatch-gui/src/: commands.rs  error.rs  lib.rs  library.rs  main.rs
crates/rompatch-gui/ui/: .npmrc  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
crates/rompatch-gui/ui/src/: App.tsx  main.tsx  styles.css
crates/rompatch-gui/ui/src/components/: AdvancedSection.tsx  ApplyPanel.tsx  ApplyTile.tsx  Badge.tsx  Button.tsx  Card.tsx  DropTile.tsx  FilePicker.tsx  HashPanel.tsx  HomePage.tsx  Input.tsx  InspectPanel.tsx  Label.tsx  LibraryEntryRow.tsx  LibraryPage.tsx  RomSourceMenu.tsx  Select.tsx  Sidebar.tsx  SidebarToggle.tsx  Switch.tsx  Tabs.tsx  Toast.tsx  UpdateBanner.tsx
crates/rompatch-gui/ui/src/lib/: cn.ts  errors.ts  icons.tsx  tauri.ts  types.ts  updater.ts  useDropTarget.ts
crates/rompatch/src/: cli.rs  main.rs
crates/rompatch/src/commands/: apply.rs  detect.rs  hash.rs  info.rs  mod.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: aps_gba.rs  aps_n64.rs  bdf.rs  bps.rs  dispatch.rs  ips.rs  pmsr.rs  ppf.rs  rup.rs  ups.rs
