[package]
name = "rompatch-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust ROM patch parser and applier"

[dependencies]
adler2 = "2"
bzip2-rs = "0.1"
crc32fast = "1.4"
md-5 = "0.10"
sha1 = "0.10"

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
