[package]
name = "rompatch-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native macOS GUI for rompatch (Tauri shell)"

[lib]
name = "rompatch_gui_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.1", features = [] }

[dependencies]
rompatch-core = { version = "=0.2.0", path = "../rompatch-core", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.10.9"
tauri = { version = "=2.11.1", features = [] }
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-process = "=2.3.1"
tauri-plugin-updater = "=2.10.1"
thiserror = "=2.0.18"
uuid = { version = "=1.23.1", features = ["v4"] }

[dev-dependencies]
tempfile = "=3.27.0"

[lints]
workspace = true
