[package]
name = "rompatch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for applying ROM patches"

[[bin]]
name = "rompatch"
path = "src/main.rs"

[dependencies]
rompatch-core = { path = "../rompatch-core", version = "0.2.2" }
lexopt = "0.3"

[lints]
workspace = true
